# CipheFile

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: FileManager.cpp  FileManager.h
src/crypto/: Argon2KDF.cpp  Argon2KDF.h  ChaCha20Cipher.cpp  ChaCha20Cipher.h  CryptoContext.cpp  CryptoContext.h
